@@ -1,3 +1,15 @@
+2013-01-24  Dan Bernstein  <mitz@apple.com>
+
+        WebNavigationData does not distinguish between an empty title and a missing title
+        https://bugs.webkit.org/show_bug.cgi?id=107917
+
+        Reviewed by Andy Estes.
+
+        * WebCoreSupport/WebFrameLoaderClient.mm:
+        (nilOrNSString): Added this helper function.
+        (WebFrameLoaderClient::updateGlobalHistory): Initialize the WebNavigationData with a nil
+        title, rather than the empty string, if the document does not have a title.
+
 2013-01-24  Mark Hahnenberg  <mhahnenberg@apple.com>
 
         Objective-C API: Rename JSValue.h/APIJSValue.h to JSCJSValue.h/JSValue.h
